modify contact page

--- a/contact.html
+++ b/contact.html
@@ -98,11 +98,11 @@
                 </div>
                 <div class="formSite">
                     <form class="fill" action="#">
-                        <label><img src="img/form/one.png" alt="logo"><input type="text" placeholder="Name:"></label>
-                        <label><img src="img/form/two.png" alt="logo"><input type="email" placeholder="Email Address:"></label>
+                        <label><img src="img/form/one.png" alt="logo"><input type="text" placeholder="Name:" required></label>
+                        <label><img src="img/form/two.png" alt="logo"><input type="email" placeholder="Email Address:" required></label>
                         <label><img src="img/form/three.png" alt="logo"><input type="number" placeholder="Phone Number:"></label>
                         <label><img src="img/form/four.png" alt="logo"><textarea name="message" id="textArea"  placeholder="Message:"></textarea></label>
-                        <input id="button" type="button" value="Submit">
+                          <button id="button">Send message</button>
                     </form>
                 </div>
             </div>
