make resposive for mobile

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 </p>
 
                 <div class="btn">
-                    <a href="Pages/about.html">KNOW ABOUT ME IN DETAILS</a>
-                    <a class="hire" href="#">HIRE ME</a>
+                    <a href="about.html">KNOW ABOUT ME IN DETAILS</a>
+                    <a class="hire" href="contact.html">HIRE ME</a>
                 </div>
             </div>
 
